# C-CPP-Projects

./: .gitignore  README.md
ExamplesCPP/: app  main.cpp  test.txt
FTS/: .clang-tidy  config.json
FTS/src/: CMakeLists.txt
FTS/src/app/: CMakeLists.txt
FTS/src/app/app/: main.cpp
FTS/src/libfts/: CMakeLists.txt
FTS/src/libfts/libfts/: funcs.cpp  funcs.hpp  funcs.test.cpp
FTS/src/libindexer/: CMakeLists.txt
FTS/src/libindexer/libindexer/: indexer.cpp  indexer.hpp  indexer.test.cpp
FTS/src/libsearcher/: CMakeLists.txt
FTS/src/libsearcher/libsearcher/: searcher.cpp  searcher.hpp
FTS/src/libutils/: CMakeLists.txt
FTS/src/libutils/libutils/: indexerutil.cpp  searcherutil.cpp
GPIO-CPP/: CMakeLists.txt
GPIO-CPP/src/: funcs.cpp  funcs.h  main.cpp
SimpleBashUtils/: README.md
SimpleBashUtils/src/: Makefile
SimpleBashUtils/src/cat/: Makefile  main.c  my_cat.c  my_cat.h
SimpleBashUtils/src/common/: common.h
SimpleBashUtils/src/grep/: Makefile  main.c  my_grep.c  my_grep.h
SimpleBashUtils/tests/: log.txt  t_cat.sh  t_grep.sh  test.sh
SimpleBashUtils/tests/test/: Makefile.txt  s21_grep_c.txt  s21_grep_h.txt  test_1.txt  test_2.txt  test_3.txt
SpringTrainingCPP/: .clang-tidy  CMakeLists.txt  names2020.csv
SpringTrainingCPP/src/: CMakeLists.txt
SpringTrainingCPP/src/appSoundex/: CMakeLists.txt
SpringTrainingCPP/src/appSoundex/appSoundex/: main.cpp
SpringTrainingCPP/src/liblinkedlist/: CMakeLists.txt
SpringTrainingCPP/src/liblinkedlist/liblinkedlist/: linkedlist.hpp  linkedlist.test.cpp
SpringTrainingCPP/src/libsoundex/: CMakeLists.txt
SpringTrainingCPP/src/libsoundex/libsoundex/: soundex.cpp  soundex.hpp  soundex.test.cpp
SpringTrainingCPP/src/libtime/: CMakeLists.txt
SpringTrainingCPP/src/libtime/libtime/: time.hpp  time.test.cpp
StringPlus/: README.md
StringPlus/src/: Makefile  my_string.c  my_string.h
StringPlus/src/tests/: test.c  test.h  test_insert.c  test_memchr.c  test_memcmp.c  test_memcpy.c  test_memset.c  test_sprintf.c  test_sscanf.c  test_strchr.c  test_strcpy.c  test_strcspn.c  test_strerror.c  test_strlen.c  test_strncat.c  test_strncmp.c  test_strncpy.c  test_strpbrk.c  test_strrchr.c  test_strstr.c  test_strtok.c  test_to_lower.c  test_to_upper.c  test_trim.c
